# sudoku

./: CMakeLists.txt  Main.qml  README.md  SudokuGrid.qml  SudokuGrid.qrc  main.cpp  sudokuboard.cpp  sudokuboard.h
